--- a/momentum/package.json
+++ b/momentum/package.json
@@ -4,14 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "dev": "webpack --watch"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "webpack": "^5.59.1"
-  },
-  "devDependencies": {
     "webpack-cli": "^4.9.1"
   }
 }
