--- a/art-quiz/.eslintrc.json
+++ b/art-quiz/.eslintrc.json
@@ -3,10 +3,13 @@
     "browser": true,
     "es2021": true
   },
-  "extends": "airbnb-base",
+  "extends": ["airbnb-base", "prettier"],
   "parserOptions": {
     "ecmaVersion": 13,
     "sourceType": "module"
   },
-  "rules": {}
+  "plugins": ["prettier"],
+  "rules": {
+    "prettier/prettier": "error"
+  }
 }
