--- a/art-quiz/package.json
+++ b/art-quiz/package.json
@@ -16,6 +16,8 @@
   },
   "devDependencies": {
     "eslint": "^8.2.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "webpack": "^5.63.0"
   }
 }
