--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,8 @@
 {
-    "plugins": ["prettier", "import"],
-    "extends": [
-        "plugin:prettier/recommended",
-        "prettier"
-    ],
+    "plugins": ["prettier", "import", "@typescript-eslint"],
+    "extends": ["plugin:prettier/recommended", "prettier", "plugin:@typescript-eslint/recommended"],
+    "parser": "@typescript-eslint/parser",
+
     "parserOptions": {
         "ecmaVersion": 2020,
         "sourceType": "module"
@@ -17,5 +16,6 @@
         "no-debugger": "off",
         "no-console": 0,
         "class-methods-use-this": "off"
-    }
+    },
+    "ignorePatterns": ["webpack.config.js"]
 }
