--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "include": ["./src/"],
     "compilerOptions": {
         "sourceMap": true,
-        "noImplicitAny": true
+        "noImplicitAny": true,
+        "lib": ["DOM"]
     }
 }
