--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
-    "plugins": ["prettier", "import", "@typescript-eslint"],
-    "extends": ["plugin:prettier/recommended", "prettier", "plugin:@typescript-eslint/recommended"],
+    "plugins": ["@typescript-eslint", "prettier", "import"],
+    "extends": ["plugin:prettier/recommended", "plugin:@typescript-eslint/recommended", "prettier"],
     "parser": "@typescript-eslint/parser",
 
     "parserOptions": {
@@ -15,7 +15,8 @@
     "rules": {
         "no-debugger": "off",
         "no-console": 0,
-        "class-methods-use-this": "off"
+        "class-methods-use-this": "off",
+        "prettier/prettier": 2
     },
     "ignorePatterns": ["webpack.config.js"]
 }
