--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,6 @@
     "compilerOptions": {
         "sourceMap": true,
         "noImplicitAny": true,
-        "lib": ["DOM"]
+        "lib": ["es2015","DOM"]
     }
 }
