--- a/christmas-task/package.json
+++ b/christmas-task/package.json
@@ -38,5 +38,8 @@
         "webpack-cli": "^4.5.0",
         "webpack-dev-server": "^4.6.0",
         "webpack-merge": "^5.7.3"
+    },
+    "dependencies": {
+        "nouislider": "^15.5.0"
     }
 }
