--- a/christmas-task/tsconfig.json
+++ b/christmas-task/tsconfig.json
@@ -3,6 +3,7 @@
     "compilerOptions": {
         "sourceMap": true,
         "noImplicitAny": true,
+        "allowJs": true,
         "lib": ["es2015", "DOM", "ESNext"]
     }
 }
