--- a/christmas-task/tsconfig.json
+++ b/christmas-task/tsconfig.json
@@ -2,6 +2,7 @@
     "include": ["./src/"],
     "compilerOptions": {
         "sourceMap": true,
+        "strict": true,
         "noImplicitAny": true,
         "allowJs": true,
         "lib": ["es2015", "DOM", "ESNext"]
