--- a/christmas-task/package.json
+++ b/christmas-task/package.json
@@ -22,6 +22,7 @@
         "copy-webpack-plugin": "^7.0.0",
         "css-loader": "^5.2.7",
         "eslint": "^7.27.0",
+        "eslint-config-airbnb": "^19.0.4",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-import": "^2.23.3",
         "eslint-plugin-prettier": "^3.4.0",
