--- a/async-race-app/package.json
+++ b/async-race-app/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-webpack-plugin": "^3.1.1",
     "prettier": "2.5.1",
+    "svg-inline-loader": "^0.8.2",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.4",
     "webpack": "^5.66.0",
