--- a/async-race-app/.eslintrc.json
+++ b/async-race-app/.eslintrc.json
@@ -10,7 +10,8 @@
     "env": {
         "es6": true,
         "browser": true,
-        "node": true
+        "node": true,
+        "commonjs": true
     },
     "globals": {
         "NodeJS": true
