--- a/async-race-app/tsconfig.json
+++ b/async-race-app/tsconfig.json
@@ -1,6 +1,8 @@
 {
     "include": ["./src/"],
     "compilerOptions": {
+        "target": "es2017",
+        "module": "commonjs",
         "sourceMap": true,
         "strict": true,
         "noImplicitAny": true,
