--- a/async-race-app/.eslintrc.json
+++ b/async-race-app/.eslintrc.json
@@ -1,6 +1,6 @@
 {
     "plugins": ["@typescript-eslint", "prettier", "import"],
-    "extends": ["plugin:prettier/recommended", "plugin:@typescript-eslint/recommended", "airbnb", "prettier"],
+    "extends": ["plugin:prettier/recommended", "plugin:@typescript-eslint/recommended", "airbnb-base", "prettier"],
     "parser": "@typescript-eslint/parser",
 
     "parserOptions": {
