--- a/christmas-task/package.json
+++ b/christmas-task/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "NewsJS",
+    "name": "ChristmasTask2",
     "version": "1.0.0",
     "description": "",
-    "main": "webpack.base.config.js",
+    "main": "index.js",
     "scripts": {
         "start": "webpack serve --open --config ./webpack.config.js --env mode=dev",
         "build": "webpack --config ./webpack.config.js --env mode=prod",
